Bug 1578324 - Cleanup some text-align properties in about:logins. r=jaws
Differential Revision: https://phabricator.services.mozilla.com/D44509

UltraBlame original commit: 79c34fa139f271c19d6d2db6a1ef3230a939d055

--- a/browser/components/aboutlogins/content/components/login-filter.css
+++ b/browser/components/aboutlogins/content/components/login-filter.css
@@ -134,6 +134,14 @@ size
 :
 16px
 ;
+text
+-
+align
+:
+match
+-
+parent
+;
 width
 :
 100
@@ -143,12 +151,33 @@ margin
 :
 0
 ;
+box
+-
+sizing
+:
+border
+-
+box
+;
 padding
 -
 block
 :
 6px
 ;
+}
+:
+host
+(
+:
+dir
+(
+ltr
+)
+)
+.
+filter
+{
 /
 *
 We
@@ -181,20 +210,6 @@ left
 :
 32px
 ;
-text
--
-align
-:
-left
-;
-box
--
-sizing
-:
-border
--
-box
-;
 }
 :
 host
@@ -222,12 +237,6 @@ padding
 right
 :
 32px
-;
-text
--
-align
-:
-right
 ;
 }
 .
